[UPDATE] purchase order changes, connection fixes
